<resources>
    <string name="app_name">LLR-Toolkit</string>
    <string name="inventory_print">Print</string>
    <string name="inventory_style">Style</string>
    <string name="inventory_size">Size</string>
    <string name="inventory_wholesale">Wholesale-\nPrice</string>
    <string name="inventory_retail">Retail-\nPrice</string>
    <string name="inventory_tags">Tags</string>
    <string name="inventory_shippingid">Shipping ID</string>
    <string name="inventory_eta">ETA</string>
    <string name="inventoryadd_qty">Quantity</string>
    <string name="inventoryadd_styleexamples">Amelia, Irma, Cassie, etc</string>
    <string name="inventory_daterec">Date\nReceived</string>
    <string name="inventoryadd_tagexamples">Holiday, Damaged, Floral, etc</string>
    <string name="inventoryadd_attachimage">Attach Image</string>
    <string name="inventoryadd_noimageselected">No Image Selected</string>
    <string name="inventoryadd_import">Import</string>
    <string name="inventoryadd_add">Add</string>
    <string name="clientadd_firstname">First Name</string>
    <string name="clientadd_lastname">Last Name</string>
    <string name="clientadd_dob">Date of Birth</string>
    <string name="clientadd_phone">Phone Number</string>
    <string name="clientadd_email">Email Address</string>
    <string name="clientadd_notes">Notes</string>
    <string name="clientadd_address">Address</string>
    <string name="importadd_client">Client</string>
    <string name="importadd_order">Order Number</string>
    <string name="importadd_shipping">Shipping Number</string>
    <string name="importadd_eta">ETA</string>
    <string name="clientadd_add">Add Client</string>
    <string name="title_activity_pager_tab_strip">PagerTabStrip</string>
    <string name="title_activity_tab_layout">TabLayout</string>
    <string name="inventory_menu">menu</string>
</resources>
