<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/ib_inventoryadd_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_launcher" />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:columnCount="2"
            android:rowCount="10"
            android:visibility="visible"
            android:layout_weight="10">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventory_style" />

            <AutoCompleteTextView
                android:id="@+id/actv_inventoryadd_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventory_size" />

            <Spinner
                android:id="@+id/spn_inventoryadd_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventory_tags" />

            <EditText
                android:id="@+id/et_inventoryadd_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventoryadd_import" />

            <Spinner
                android:id="@+id/spn_inventoryadd_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventory_wholesale" />

            <EditText
                android:id="@+id/et_inventoryadd_wholesale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventory_daterec" />

            <EditText
                android:id="@+id/et_inventoryadd_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/inventory_retail" />

            <EditText
                android:id="@+id/et_inventoryadd_retail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_clientadd_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clientadd_add"
                android:layout_columnSpan="2"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World"/>
        </GridLayout>
    </LinearLayout>
</ScrollView>