<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/ib_clientadd_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_launcher" />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:columnCount="2"
            android:rowCount="10"
            android:visibility="visible"
            android:layout_weight="10">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_firstname" />

            <EditText
                android:id="@+id/et_clientadd_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_lastname" />

            <EditText
                android:id="@+id/et_clientadd_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_dob" />

            <EditText
                android:id="@+id/et_clientadd_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_address" />

            <EditText
                android:id="@+id/et_clientadd_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_phone" />

            <EditText
                android:id="@+id/et_clientadd_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_email" />

            <EditText
                android:id="@+id/et_clientadd_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/clientadd_notes" />

            <EditText
                android:id="@+id/et_clientadd_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_clientadd_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clientadd_add"
                android:layout_columnSpan="2"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World"/>
        </GridLayout>
    </LinearLayout>
</ScrollView>