<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:rowCount="10"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/importadd_client" />

        <Spinner
            android:id="@+id/spn_importadd_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/importadd_order" />

        <EditText
            android:id="@+id/et_importadd_ordernum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/importadd_shipping" />

        <EditText
            android:id="@+id/et_importadd_shippingnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </GridLayout>
        <Button
            android:id="@+id/btn_importadd_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventoryadd_import"/>
    </LinearLayout>


</ScrollView>