<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageButton
            android:id="@+id/ib_inventoryadd_imgplaceholder"
            android:layout_width="125dp"
            android:layout_height="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:onClick="ibClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/tv_inventoryadd_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/inventory_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_inventoryadd_imgplaceholder" />

        <AutoCompleteTextView
            android:id="@+id/actv_inventoryadd_style"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:completionThreshold="2"
            android:hint="@string/inventoryadd_styleexamples"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_inventoryadd_style"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_style"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_inventoryadd_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/inventory_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_style" />

        <Spinner
            android:id="@+id/spn_inventoryadd_size"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_style" />

        <EditText
            android:id="@+id/et_inventoryadd_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/inventoryadd_tagexamples"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_inventoryadd_tags"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_tags"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_inventoryadd_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/inventory_tags"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_size"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_inventoryadd_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventoryadd_import"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_tags"
            android:layout_marginStart="16dp" />

        <Spinner
            android:id="@+id/spn_inventoryadd_import"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_import"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_tags"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_inventoryadd_wholesale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_wholesale"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_import"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/et_inventoryadd_wholesale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_wholesale"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_import"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_inventoryadd_retail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/inventory_retail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_wholesale"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/et_inventoryadd_retail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_retail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_wholesale"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_inventoryadd_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/inventoryadd_qty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_retail"
            android:layout_marginStart="16dp" />

        <Spinner
            android:id="@+id/spn_inventoryadd_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_inventoryadd_qty"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_retail" />

        <Button
            android:id="@+id/btn_inventoryadd_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/inventoryadd_add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_inventoryadd_qty" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>